added the ability to use an iPhoto library for random images

--- a/README.textile
+++ b/README.textile
@@ -1,9 +1,12 @@
 h1. Random Collage
 
-h2. Installing RMagick
-
+h2. Installing RMagick on Mac OS X
+  
+  sudo port install rb-rmagick
+  
+  or
+  
   sudo port install tiff -macosx
-  sudo port install ghostscript
   sudo port install ImageMagick
   sudo gem install rmagick
 
